Blogs update style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,21 +84,22 @@
 .readme {
   position: relative;
   padding: 11px 35px;
-  background: #fff;
-  color: #00796b;
+  background: none;
+  color: #fff;
   border: 2px solid #fff;
   font-weight: 600;
   font-size: 15px;
   letter-spacing: 1px;
   display: inline-block;
+  margin-top: 1.5em;
   border-radius: 5px;
   -webkit-border-radius: 5px;
 }
 
-/* .readme:hover{
-  color: white;
-  background-color: #00796b;
-} */
+.readme:hover{
+  color: #00796b;
+  background-color: white;
+} 
 
 .contactme {
   position: relative;
